2008-09-15 Ronald van Haren <ronald.archlinux.org>
	* added x86_64 version  & a couple of patches to build it

2008-09-14 Jaroslav Lichtblau <tu@dragonlord.cz>
	* Added provided man page to the package

2008-09-11 Jaroslav Lichtblau <tu@dragonlord.cz>
	* Package moved to [community]