@@ -1,34 +1,45 @@
 # $Id$
-# Maintainer: Jaroslav Lichtblau <tu@dragonlord.cz>
+# Maintainer : Jaroslav Lichtblau <tu@dragonlord.cz>
 # Contributor: Angelo Theodorou <encelo@users.sourceforge.net>
+# contributor: Laurent Carlier <lordheavym@gmail.com>
 
 pkgname=flobopuyo
 pkgver=0.20
-pkgrel=3
+pkgrel=4
 pkgdesc="Clone of the famous PuyoPuyo."
 arch=('i686' 'x86_64')
 url="http://www.ios-software.com/?page=projet&quoi=29"
 license=('GPL')
 depends=('libgl' 'sdl_image' 'sdl_mixer')
+makedepends=('mesa')
 source=(http://www.ios-software.com/$pkgname/$pkgname-$pkgver.tgz \
-        $pkgname-makefile.patch $pkgname-0.20-gcc4.patch \
-	$pkgname-0.20-libs.patch)
-
+	$pkgname-makefile.patch $pkgname-0.20-gcc4.patch \
+	$pkgname-0.20-libs.patch
+	flobopuyo.desktop
+	flobopuyo.png)
 md5sums=('88961898c9dd48b60464f6f10f695b8b'
          '4c6667be791681d43bb7ea1b6f9f9072'
          'bb8afd6e04bde08fd33e22c466674878'
-         '7756928de7edbb48cfb40880260e4c22')
+         'b7c0fd71cd948bbc43a86742ffad6d86'
+         '20ebbe6e7ad57fe5f89a03ee40b4257e'
+         'd9abe591e6cdd654269474444df1ec9d')
 
 build() {
   cd "${srcdir}/$pkgname-$pkgver"
 
-  patch -Np0 < ${srcdir}/$pkgname-makefile.patch || return 1
-  patch -Np1 < $srcdir/$pkgname-$pkgver-gcc4.patch || return 1
-  patch -Np1 < $srcdir/$pkgname-$pkgver-libs.patch || return 1
+  patch -Np0 < ${srcdir}/$pkgname-makefile.patch
+  patch -Np1 < ${srcdir}/$pkgname-$pkgver-gcc4.patch
+  patch -Np1 < ${srcdir}/$pkgname-$pkgver-libs.patch
 
-  make || return 1
+  make
+}
+
+package() {
+  cd "${srcdir}/$pkgname-$pkgver"
+
   make DESTDIR=${pkgdir} install
 
-#man page
-  install -D -m644 "man/$pkgname.6" "${pkgdir}/usr/share/man/man6/$pkgname.6"
+  install -D -m644 man/${pkgname}.6 ${pkgdir}/usr/share/man/man6/$pkgname.6
+  install -D ../flobopuyo.desktop ${pkgdir}/usr/share/applications/flobopuyo.desktop
+  install -D ../flobopuyo.png ${pkgdir}/usr/share/pixmaps/flobopuyo.png
 }
