@@ -14,7 +14,7 @@
  ifneq ($(PLATFORM), $(CYGWIN_VERSION))
 -CFLAGS:=$(CFLAGS) `$(SDL_CONFIG) --cflags` -I/sw/include
 -LDFLAGS:=$(LDFLAGS) `$(SDL_CONFIG) --cflags --libs`
-+CXXFLAGS:=$(CXXFLAGS) `$(SDL_CONFIG) --cflags` -I/sw/include
++CXXFLAGS:=$(CXXFLAGS) `$(SDL_CONFIG) --cflags` -I/usr/include
 +LDFLAGS:=$(LDFLAGS)
 +LIBS:=$(LIBS) `$(SDL_CONFIG) --cflags --libs`
  endif
