@@ -1,0 +1,10 @@
+[Desktop Entry]
+Encoding=UTF-8
+Name=Flobopuyo
+Comment=A remake of the famous PuyoPuyo
+Exec=flobopuyo
+Icon=/usr/share/pixmaps/flobopuyo.png
+Terminal=false
+Type=Application
+Categories=Application;Game;ArcadeGame;
+StartupNotify=false
