@@ -1,3 +1,7 @@
+2010-07-13 Laurent Carlier <lordheavym@gmail.com>
+	* Rebuild for i686 and x86_64
+	* Add .desktop file and icon
+
 2008-09-15 Ronald van Haren <ronald.archlinux.org>
 	* added x86_64 version  & a couple of patches to build it
 
